[tool.poetry]
name = "sentimentclassifier"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlip = "^0.2"
seaborn = "^0.13.0"
mlflow = "^2.9.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
plotly = "^5.18.0"
wordcloud = "^1.9.3"
gensim = "^4.3.2"
textblob = "^0.17.1"
transformers = "^4.36.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
streamlit = "^1.29.0"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
